# Nav2024-2025

Cameras/: setup.sh
Control-Server/: Comp to Cam Telemetry.py  flask_socket_server.py  getPID.py
IMU/: imu_test.ino
PID/: PID.ino
Previous code/Cameras/: stream.sh
Previous code/PID/: PID.ino
Previous code/PiScripts/: PiSetup.sh
Previous code/UDP Server/: UDP-Server.ino
Previous code/UPD_Server_PID/: UDP_Sever_PID.ino
Previous code/measure_object_size/: pyproject.toml
measure_object_size/: stretch.py
measuring/: pyproject.toml
